Update release connection string

--- a/BloodConnector.WebAPI/Web.Release.config
+++ b/BloodConnector.WebAPI/Web.Release.config
@@ -8,8 +8,8 @@
     that matches the "name(It can be any key)" attribute containing the value "DefaultConnection".
   -->
   <connectionStrings>
-  <add name="DefaultConnection" 
-       connectionString="Data Source=SQL5021.Smarterasp.net;Database=DB_A1D815_BloodConnector;User ID=DB_A1D815_BloodConnector_admin;Password=arif1234;Trusted_Connection=False;Connection Timeout=60;" providerName="System.Data.SqlClient"
+  <add name="DefaultConnection"
+       connectionString="Data Source=SQL5023.site4now.net;Database=DB_A3D72E_arifduet;User ID=DB_A3D72E_arifduet_admin;Password=arif1234;Trusted_Connection=False;Connection Timeout=60;" providerName="System.Data.SqlClient"
        xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
   
