--- a/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
+++ b/BloodConnector.WebAPI/BloodConnector.WebAPI.csproj
@@ -263,8 +263,10 @@
     <Compile Include="Controllers\Api\ValuesController.cs" />
     <Compile Include="Helper\FileHelper.cs" />
     <Compile Include="Helper\We.cs" />
+    <Compile Include="Utilities\IpInfoClient.cs" />
     <Compile Include="VM\AttachmentVM.cs" />
     <Compile Include="VM\DeveloperVM.cs" />
+    <Compile Include="VM\IpInfoViewModel.cs" />
     <Compile Include="VM\UsersBloodGroupVM.cs" />
     <Compile Include="VM\UserVM.cs" />
     <Compile Include="Filters\ValidateModelStateAttribute.cs" />
