--- a/BloodConnector.WebAPI/packages.config
+++ b/BloodConnector.WebAPI/packages.config
@@ -7,6 +7,9 @@
   <package id="AngularJS-Toaster" version="2.0.0" targetFramework="net46" />
   <package id="angular-local-storage" version="0.7.0" targetFramework="net46" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
+  <package id="Autofac" version="4.8.1" targetFramework="net46" />
+  <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net46" />
+  <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net46" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
